# WaveformAnalysis

./: .coverage  .gitignore  .pre-commit-config.yaml  ADAPTER_PLUGIN_BEHAVIOR.md  ADAPTER_SYSTEM_GUIDE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DAQAnalyzer.py  DOCSTRING_IMPROVEMENT_PLAN.md  DOCSTRING_STATUS_AND_RECOMMENDATIONS.md  DUAL_BASELINE_IMPLEMENTATION.md  HELP_SYSTEM_COMPLETE.md  HELP_SYSTEM_SUMMARY.md  LICENSE  LOAD_BALANCER_INTEGRATION_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  TODO.md  V1725_BASELINE_FIX.md  add_plugin_docstrings.py  core_todo.md  debug_batch_cache.py  debug_batch_cache_deep.py  diagnose_cache.py  docs_todo.md  docstring_report.txt  install.sh  list_all.ipynb  package-lock.json  pyproject.toml  requirements.txt  setup.py  tasks.md  test_simple_batch.py  tutorial.ipynb  tutorial_advanced.ipynb  untitled:plan-storageOptimizationPlan.prompt.md  usage.ipynb
.claude/: .nfs000000000878802c0000021d  .nfs000000000878805400000154  .nfs0000000008788210000001d3  .nfs000000000878821600000212  .nfs00000000087882a100000219
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: docs-check.yml  python-tests.yml
deprecated/: daq.py  loader.py
docs/: ARCHITECTURE.md  CACHE.md  CSV_HEADER_HANDLING.md  EXECUTOR_FRAMEWORK_SUMMARY.md  HOW_TO_SKIP_WAVEFORMS.md  IMPLEMENTATION_COMPLETE.md  IMPORT_STYLE_GUIDE.md  INDEX.md  MEMORY_OPTIMIZATION.md  NEW_FEATURES.md  OPTIMIZATION_SUMMARY.md  PROGRESS_TRACKING_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SIGNAL_PROCESSING_PLUGINS.md  STORAGE_MIGRATION_GUIDE.md  UPDATE_SUMMARY.md  USAGE.md  api_reference.md  data_module.md
docs.backup.20260112/: ARCHITECTURE.md  CACHE.md  CONTEXT_PROCESSOR_WORKFLOW.md  CSV_HEADER_HANDLING.md  DOCS_OPTIMIZATION_SUMMARY.md  FORMAT_IMPROVEMENTS.md  HOW_TO_SKIP_WAVEFORMS.md  INDEX.md  MEMORY_OPTIMIZATION.md  NUMBA_MULTIPROCESS_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PREVIEW_EXECUTION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STREAMING_GUIDE.md  USAGE.md  api_reference.html  config_reference.md  data_module.md
docs.backup.20260112/indexes/: architecture.md  features.md  getting-started.md
docs/agents/: INDEX.md  architecture.md  configuration.md  conventions.md  index.yaml  lifecycle.md  plugins.md  quickstart.md  references.md  workflows.md
docs/api/: README.md  api_reference.html  api_reference.md  config_reference.md  plugin_guide.md
docs/architecture/: ARCHITECTURE.md  CONTEXT_PROCESSOR_WORKFLOW.md  PLUGIN_SYSTEM_ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  RECORDS_WAVE_POOL.md  data_module.md
docs/cli/: README.md  WAVEFORM_CACHE.md  WAVEFORM_DOCS.md  WAVEFORM_PROCESS.md
docs/development/: CONTRACT_TESTS.md  IMPORT_STYLE_GUIDE.md  README.md  worktrees.md
docs/features/: README.md
docs/indexes/: api-reference.md  development.md  updates.md
docs/plugins/: ADAPTER_PLUGIN_BEHAVIOR.md  DAQ_ADAPTER_GUIDE.md  PLUGIN_AUTHORING_GUIDE.md  README.md  WAVEFORM_WIDTH_PLUGIN.md
docs/quickstart/: QUICKSTART.md  QUICK_REFERENCE.md  README.md  USAGE.md
docs/updates/: DOCS_OPTIMIZATION_SUMMARY.md  DOCS_ORGANIZATION_PLAN.md  DOC_SYNC_CHECKLIST.md  DT_MIGRATION_TAILLIST.md  FORMAT_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  NEW_FEATURES.md  PROJECT_SUMMARY.md  README.md  STORAGE_MIGRATION_GUIDE.md  TEST_AND_DOC_AUTOGEN_IMPROVEMENT_PLAN.md  UPDATE_SUMMARY.md  V1725_EXISTING_CHAIN_INTEGRATION.md
docs/user-guide/: EXAMPLES_GUIDE.md  GOLDEN_PATH.md  QUICKSTART_GUIDE.md  README.md
examples/: advanced_features.py  basic_analysis.py  config_management_example.py  demo_doc_generator.py  demo_help_system.py  demo_preview_execution.py  dual_baseline_example.py  list_plugin_configs_example.py  preview_quickstart.md  progress_tracking_demo.py  records_pipeline_example.py  records_view.py  s1_s2_pipeline_demo.ipynb  signal_processing_example.py  skip_waveforms.py  streaming_plugins_demo.py  verify_signal_processing_lineage.py  waveform_width_example.py
scripts/: README.md  _quality_common.py  add_plugin_docstrings.py  assess_change_impact.py  benchmark_io.py  check_agent_handoff.py  check_doc_anchors.py  check_doc_sync.sh  check_imports.py  check_plugin_docs.py  clear_downstream_cache.py  demo_doc_generator.py  demo_help_system.py  demo_skip_waveforms.py  fix_imports.py  package_skill.sh  performance_regression_check.py  release_artifact_sync.py  render_agent_docs.py  run_tests.sh  scaffold_plugin.py  schema_compat_check.py  test_profiler.py  update_breadcrumbs.py  verify_install.py
scripts/precommit/: black_per_file.py
scripts/worktrees/: bootstrap_venv.sh  create.sh  integrate.sh
test_docs/: api_reference.html  api_reference.md  config_reference.md  plugin_guide.md
test_docs_cli/: api.md
test_output/: api.html  api_full.md  config.md  plugin_guide.md
tests/: basic_features_helpers.py  batch_processor_helpers.py  conftest.py  daq_adapter_helpers.py  streaming_helpers.py  test_agent_quality_checks.py  test_basic.py  test_basic_features.py  test_basic_features_config.py  test_basic_features_core.py  test_basic_features_depends.py  test_basic_features_records.py  test_batch_processor.py  test_batch_processor_basic.py  test_batch_processor_config.py  test_batch_processor_errors.py  test_batch_processor_runtime.py  test_cache.py  test_cache_analyzer.py  test_cache_cleaner.py  test_cache_diagnostics.py  test_cache_invalidation.py  test_cache_optimization.py  test_cache_statistics.py  test_cache_utils.py  test_chainable_steps.py  test_check_agent_handoff.py  test_chunk_utils.py  test_cli_show_daq.py  test_compression.py  test_context_core.py  test_context_core_clone.py  test_context_core_preview.py  test_context_core_time.py  test_context_legacy_cache_api.py  test_csv_header_handling.py  test_daq.py  test_daq_adapter.py  test_daq_adapter_integration.py  test_daq_adapter_specs.py  (+59 more)
waveform_analysis/: __init__.py  cli.py  cli_cache.py
waveform_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+369 files in other folders)
