[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveform-analysis"
version = "0.2.0"
description = "波形数据分析工具包 - 用于处理DAQ系统采集的波形数据"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "snow john", email = "wolf_smile@outlook.com"}
]
keywords = ["waveform", "data-analysis", "daq", "physics", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "iminuit>=2.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "jinja2>=3.0.0",
]
docgen = [
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/SnowingWolf/WaveformAnalysis/blob/master/docs/features/README.md"
Repository = "https://github.com/SnowingWolf/WaveformAnalysis.git"
"Bug Tracker" = "https://github.com/SnowingWolf/WaveformAnalysis/issues"

[project.scripts]
waveform-process = "waveform_analysis.cli:main"
waveform-docs = "waveform_analysis.utils.cli_docs:main"
waveform-cache = "waveform_analysis.cli_cache:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waveform_analysis*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=waveform_analysis --cov-report=html --cov-report=term"
markers = [
    "slow: 耗时较长的测试（真实文件 I/O 等）",
    "integration: 集成测试（需要完整 Context 或多插件协作）",
    "contract: 契约/兼容性测试",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (自动升级语法，但会保持 Python 3.8 兼容)
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file (sometimes needed for conditional imports)
    "E722",  # bare except (will fix gradually)
    "B008",  # do not perform function calls in argument defaults
    "B017",  # assert-raises-exception (common test pattern)
    "B023",  # function-uses-loop-variable (often false positive in closures)
    "B027",  # empty-method-without-abstract-decorator (design choice)
    "B028",  # no-explicit-stacklevel (will fix gradually)
    "B904",  # raise-without-from-inside-except (will fix gradually)
    "C901",  # too complex
    "F401",  # unused-import (some are intentional re-exports for public API)
    "F811",  # redefinition of unused name (sometimes intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["waveform_analysis"]
force-sort-within-sections = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true  # 保持 Union[str, Path] 而不是 str | Path (Python 3.8 兼容)
